# rust_clip-text

./: Cargo.toml  readme.md  todo.json
src/: clipbord.rs  data_model.rs  main.rs  routedata.rs  savedata.rs
