[package]
name = "rustgo"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.2"         # Accès au presse-papiers
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"           # Horodatage
colored = "2.0"          # Couleur dans le terminal